Fixed header on mobile for now.

--- a/_assets/scss/regions/_header.scss
+++ b/_assets/scss/regions/_header.scss
@@ -119,6 +119,10 @@
       .js-scrolling-down & {
         background-color: $color-black;
       }
+
+      @media (hover: none) {
+        content: none;
+      }
     }
 
     &:hover {
